--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "vercel-node@3"
-    }
-  }
+  "builds": [
+    { "src": "api/**/*.ts", "use": "@vercel/node@2.15.11" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
