--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
   "name": "tonechain-siwe-server",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "engines": { "node": ">=20 <21" }
-  "dependencies": {
-    "ethers": "^6.12.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.6.3"
-  }
+  "private": true
 }
