--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tonechain-siwe-server",
   "private": true,
   "dependencies": {
-    "ethers": "5.7.2"
-  }
+  "@supabase/supabase-js": "^2.45.0",
+  "ethers": "^6.11.1"
+}
 }
